[package]
name = "gsl_bfgs"
description = "Rust implementation of the BFGS algorithm built on the GNU Scientific Library(GSL)."
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "GNU/General Public Liscense v3.0"
repository = "https://github.com/dkkim1005/rust-gsl-bfgs.git"

[dependencies]
rand = "0.8"
