[package]
name = "gsl_bfgs"
description = "Rust implementation of the BFGS algorithm built on the GNU Scientific Library(GSL)."
version = "0.1.0"
authors = ["Dongkyu Kim <dkkim1005@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "	GPL-3.0-or-later"
repository = "https://github.com/dkkim1005/rust-gsl-bfgs.git"

[dependencies]
rand = "0.8"
